--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@
 github_info:
     username:          DS4PS 
     branch:            master
-    website-repo:      cpp-523-sum-2021
-    course-repo:       cpp-523-sum-2021
+    website-repo:      cpp-523-template
+    course-repo:       cpp-523-template
 
 # Site subpath, e.g. /blog
-url :               "https://ds4ps.github.io"
-baseurl:            "/cpp-523-sum-2021"
-course_url:         "http://ds4ps.org/cpp-523-sum-2021/"
+url :               "https://watts-college.github.io/"
+baseurl:            "/cpp-523-template"
+course_url:         "https://watts-college.github.io/cpp-523-template/"
 
 
 # NAVIGATION BAR
